--- a/README
+++ b/README
@@ -1,27 +1,41 @@
-F# Language Binding for MonoDevelop 3.0 and later versions
-Released under the Apache 2.0 License
+F# Language Binding for MonoDevelop 3.0 and later versions, Apache 2.0 License
 
-You can install F# Language Binding via Add-in manager by opening 'Gallery' tab and finding 'F# Language Binding' in the 'Language Bindings' section.
+Install F# Language Binding via the MonoDeveop Add-in manager.
+
+MonoDevelop 
+      --> Add-in manager
+      --> Gallery
+      --> Language Bindings
+      --> F# Language Binding
+
+Then do this:
+
+   MonoDevelop 
+      --> Options/Preferences 
+      --> Source Code 
+      --> Code Formatting 
+      --> Text File 
+      --> Convert tabs to spaces
 
 Adds F# project support and allows you to code in F# in MonoDevelop. 
 Can create such projects as:
-- Console Application
-- Library
-- Tutorial Project
-- Gtk Project
+* Console Application
+* Library
+* Tutorial Project
+* Gtk Project
 
 Supports the following features:
-- Code completion
-- Highlighting
-- Tooltips
-- Debugging 
+* Code completion
+* Highlighting
+* Tooltips
+* Debugging 
 
 For more information about F# and code examples see these links:
-- http://fsharp.net
-- http://tryfsharp.org
-- http://fssnip.net
+* http://fsharp.net
+* http://tryfsharp.org
+* http://fssnip.net
 
-You can also visit the wiki page at https://github.com/fsharp/fsharpbinding/wiki
+Join [The F# Open Source Group](http://fsharp.github.com)
 
-Join the open source F# group on Google Groups, https://groups.google.com/forum/?fromgroups#!forum/fsharp-opensource
+We use [github](http://fsharp.github.com/fsharpbinding) for tracking work items and suggestions.
 
