--- a/README
+++ b/README
@@ -58,7 +58,7 @@ Don't give up! Add an issue to [the issue tracker](http://fsharp.github.com/fsha
 To check things are working try a few different things somewhat at random:
   - Check the F# templates are appearing
   - Create a console project (NOTE: retarget it to .NET 4.0 using right-click->options->General)
-  - Check there are completion lists in the console project
+  - Check there are completion lists in the console project e.g. for 'System.' and 'System.Console.WriteLine(' and 'List.'
   - Check you can build the console project
   - Check you can run the console project
   - Check you can "debug-step-into" the console project
@@ -67,7 +67,11 @@ To check things are working try a few different things somewhat at random:
   - Load an existing .fsproj (e.g. see MonoDevelop.FSharpBinding/tests/projects/...) and check if completion works etc.
   - Run xbuild on a few .fsproj (this is nothing to do with the binding, it is just fsharp/fsharp)
 
-There are a couple of known issues, see https://github.com/fsharp/fsharpbinding/issues. The issue where new projects target .NET 3.5 by default is really annoying.
+There are a couple of known issues, see https://github.com/fsharp/fsharpbinding/issues.
+
+On windows, use the file MonoDevelop.FSharpBinding\MonoDevelop.FSharp.windows.fsproj. Be aware that this is not the original file, which is MonoDevelop.FSharp.orig.  The windows file is created automatically now and then to help development on Windows.
+
+On Mac/Linux, please develop using  the 'Makefile' with Mono 3.0 and FSharp 3.0. There is an old Makefile for the days before xbuild works, but this is not used to prepare distributions.
 
 If you make changes to the binding, then loss of completion lists etc. can be disturbing and hard to debug. There are some debugging techniques. To launch MD you can use
    /Applications/MonoDevelop.app/Contents/MacOS/MonoDevelop --new-window --no-redirect
@@ -75,4 +79,25 @@ If you make changes to the binding, then loss of completion lists etc. can be di
 To enable some logging you can use
   export FSHARPBINDING_LOGGING=*
 
+
+## Notes for People Preparing Releases
+
+The addin gets released to http://addins.monodevelop.com under project 'FSharp' (project index 28). Contact @tpetricek or @funnelweb to make an update.
+
+To build the .mpack files to upload to this site, use 
+    make pack-all
+
+The files go under pack/...
+
+
+The build process builds several versions of the addin for specific different versions of MonoDevelop.  MonoDevelop APIs can 
+change a bit and are not binary compatible. We try to keep up with 
+  (a) the latest version available as an Ubuntu package
+  (b) the latest version available in the 'Stable' channel on Windows and Mac
+  (c) the latest version available in the 'Beta' channel on Windows and Mac
+
+When developing generally use (c)
+
+The build is performed against the MonoDevelop binaries we depend on in dependencies/..., which have been 
+snarfed from MonoDevelop installs.
 
