--- a/README
+++ b/README
@@ -82,7 +82,7 @@ To enable some logging you can use
 
 ## Notes for People Preparing Releases
 
-The addin gets released to http://addins.monodevelop.com under project 'FSharp' (project index 28). Contact @tpetricek or @funnelweb to make an update.
+The addin gets released to http://addins.monodevelop.com under project 'FSharp' (project index 48). Contact @sega, @tpetricek or @funnelweb to make an update.
 
 To build the .mpack files to upload to this site, use 
     make pack-all
